# EMBL-EBI-Protein-mcp

./: .gitignore  ENHANCEMENTS.md  LICENSE  README.md  debug_mcp.py  pyproject.toml  run_tests.py  test_api.py  test_enhancements.py  test_human_taxonomy.py  test_mcp_protocol.py  test_real_mcp.py  test_wrapper.py
.github/workflows/: test.yml
embl_ebi_protein_mcp/: __init__.py  bridge.py  cli.py  main.py  mcp_server.py  setup.py
scripts/: lint.sh  test.sh
tests/: __init__.py  conftest.py  test_main.py
