[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EMBL-EBI-Protein-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for EMBL-EBI Protein database access"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "M. Flotho", email = "matthias.flotho@ccb.uni-saarland.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]


[project.scripts]
embl_ebi_protein_mcp = "embl_ebi_protein_mcp.cli:main"


[project.urls]
Homepage = "https://github.com/MCPmed/EMBL-EBI-Protein-mcp"
Repository = "https://github.com/MCPmed/EMBL-EBI-Protein-mcp"
Documentation = "https://github.com/MCPmed/EMBL-EBI-Protein-mcp#readme"
Issues = "https://github.com/MCPmed/EMBL-EBI-Protein-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["embl_ebi_protein_mcp*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=embl-ebi-protein-mcp --cov-report=term-missing" 